--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ vignettes/*.html
 vignettes/*.pdf
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
+rsconnect/
 # knitr and R markdown default cache directories
 *_cache/
 /cache/
